# projeto-final-ciclo1

./: .gitignore  README.md  app.py  example.env  pyproject.toml  requirements.txt
Docs/: Estudo de caso.docx  levantamento de requisitos.docx
Docs/imagens/: contrato
Docs/imagens/formulario/: formulario.txt
infra/: main.py  tempCodeRunnerFile.py
infra/data/: __init__.py  atualizar_tabelas.py  bd_classes.py  entidades.py  example.env  gerenciamento.py  gestao_usuarios.py  teste_bd.py  teste_cadastro_login.py
infra/data/gerenciamento/: config_bd.py  func_bd.py
infra/email/: enviar_email.py
infra/func/: ocr.py  teste.py
infra/func/tessdata/: model_hand (cópia).h5
infra/ui/: icons.qrc  icons_.qrc  icons_qrc.qrc  icons_rc.py  login.ui  main.py  sistema.ui  ui_login.py  ui_sistema.py
tests/bd/: teste_bd.py
tests/tensorflow/: main.py  teste.py
